--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
   <style></style>
 </head>
 <body>
-  <div id="canvas"></div>
-  <script>
-    canvas.onclick = (e) =>{
+  <!-- 原始做法 -->
+  <!-- JS操作DOM很慢的哦 -->
+  <!-- <div id="canvas"></div> -->
+  <!-- <script>
+    canvas.onmousemove = (e) =>{
       console.log(e)
       console.log(e.clientX)
       console.log(e.clientY)
@@ -28,6 +30,74 @@
       div.style.backgroundColor = 'black'
       canvas.appendChild(div)
     }
+  </script> -->
+  <canvas id="canvas" width="" height=""></canvas>
+  <script>
+    // 确定画布的大小
+    let canvas = document.getElementById('canvas')
+    canvas.width = document.documentElement.clientWidth
+    canvas.height =document.documentElement.clientHeight
+    // 设置画笔
+    let ctx = canvas.getContext('2d')
+    ctx.fillStyle = 'black'
+    ctx.strokeStyle = 'black'
+    ctx.lineWidth = 20
+    ctx.lineCap = 'round'
+
+    let painting = false
+    let last
+
+    // 分辨触屏设备
+    let isTouchDevice = 'ontouchstart' in document.documentElement
+    console.log(isTouchDevice);
+    
+    if(isTouchDevice) {
+      // 支持触屏
+      canvas.ontouchstart = (e) => {
+        last = [e.clientX,e.clientY]
+      }
+      canvas.ontouchmove = (e) => {
+        let x = e.touches[0].clientX
+        let y = e.touches[0].clientY
+        // console.log(x,y);
+        // 画圆
+        // ctx.beginPath()
+        // ctx.arc(x,y,4,0,2*Math.PI)
+        // ctx.fill()
+        // 连线
+        drawLine(last[0],last[1],x,y)
+        last = [x,y]
+      }
+    }else {
+      // 不支持触屏就用鼠标
+      canvas.onmousedown = (e) => {
+        last = [e.clientX,e.clientY]
+        painting = true
+      }
+      canvas.onmousemove = (e) =>{
+        if(painting) {
+          // 画方形
+          // ctx.fillRect(e.clientX-4,e.clientY-4,8,8)
+          // 画圆形
+          // ctx.beginPath()
+          // ctx.arc(e.clientX-4,e.clientY-4,4,0,2*Math.PI)
+          // ctx.fill()
+          // 划线连接
+          drawLine(last[0],last[1],e.clientX,e.clientY)
+          last = [e.clientX,e.clientY]
+        }
+      }
+      canvas.onmouseup = () => {
+        painting = false
+      }
+    }
+
+    function drawLine(x1,y1,x2,y2) {
+      ctx.beginPath()
+      ctx.moveTo(x1,y1)
+      ctx.lineTo(x2,y2)
+      ctx.stroke()      
+    } 
   </script>
 </body>
 </html>
