修改防抖节流函数

--- a/write/promise.html
+++ b/write/promise.html
@@ -14,7 +14,7 @@
   <h2>尝试实现Promise</h2>
   <p>Promise有三种状态：Pending初始态，Fulfilled成功态，Rejected失败态</p>
 
-  <script>
+  <!-- <script>
     const Promise1 = (executor) => {
       let self = this;
       self.status = "pending";
@@ -60,6 +60,7 @@
     },function (err) {
         console.log('err:', err);
     })
-  </script>
+  </script> -->
+
 </body>
 </html>
